@@ -1029,12 +1029,17 @@ Port=0x378
 # Select the interface type (wiring) for the display. Supported values are
 # 68 for 68-style connection (RESET level high) and 80 for 80-style connection
 # (RESET level low). [legal: 68, 80; default: 80]
-InterfaceType=68
+InterfaceType=80
 
 # On fast machines it may be necessary to slow down transfer to the display.
 # If this value is set to zero, delay is disabled. Any value greater than
 # zero slows down each write by one microsecond. [legal: 0-1000; default: 1]
 DelayMult=0
+
+# The original wiring used an inverter to drive the control lines. If you do
+# not use an inverter set haveInverter to off. [default: yes; legal: yes, no]
+haveInverter=no
+
 
 
 ## serial POS display driver ##
